Add configurable logging with kleur and LOG_LEVEL
Introduces a new logger utility using the 'kleur' package for colored console output. Adds a LOG_LEVEL environment variable for controlling log verbosity, updates documentation to describe logging behavior, and enhances request logging in the middleware and articles route.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ SALESFORCE_ARTICLE_OBJECT=Knowledge__kav
 
 # App
 PORT=3000
+
+# Logging (optional)
+# LOG_LEVEL=debug | info | warn | error | silent
+LOG_LEVEL=info
