--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.3"
+    "jsonwebtoken": "^9.0.3",
+    "kleur": "^4.1.5"
   },
   "devDependencies": {
     "eslint": "^8.57.1",
