--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "kleur": "^4.1.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^9.1.0",
+    "globals": "^15.15.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.4.2"
   }
